added the toggle feature on day10

--- a/day10/inde.html
+++ b/day10/inde.html
@@ -10,8 +10,9 @@
     <p>Hello World!</p>
     <button>Click Me</button>
     <br/>
+    <div id="imageWrapper">
     <img id="hiteshsir" src="https://images.pexels.com/photos/879109/pexels-photo-879109.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="hitesh-sir-image">
-    
+    </div>
     <hr/>
 
     <div id="bgColor">
