started day17 questions

--- a/day9/index.html
+++ b/day9/index.html
@@ -43,7 +43,8 @@ body{
    <p id="textchange">Text Paragraph</p>
    <button id="btn">Click Here</button>
     <script>
-
+    
+    //Day 9 : DOM Manipulation
     // task 1: Select an HTML element by its ID and change its text content.   
    const changeText = document.getElementById('act1');
    changeText.innerHTML = "Text Changed";
